litmask/tests/compile/mask_deserialize_serde_attr_container.stderr
error: MaskDeserialize! invalid-arg: `#[serde(tag)]` is not yet supported; keep a plain derive (or `#[unmasked_derive]` under `#[mask_all]`)
 --> tests/compile/mask_deserialize_serde_attr_container.rs:9:9
  |
9 | #[serde(tag = "type")]
  |         ^^^
